--- a/style.css
+++ b/style.css
@@ -320,3 +320,14 @@ input {
 }
 
 /* Need Support style end here */
+
+
+/* Footer Section style start here */
+.footer-content{
+    width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 100px 0 50px 0;
+}
+/* Footer Section style end here */
