--- a/style.css
+++ b/style.css
@@ -119,14 +119,16 @@ body {
 
 .btn-main {
     padding: 12px 20px 12px 20px;
+    cursor: pointer;
     font-size: 20px;
     font-weight: 600;
     line-height: 23px;
-    color: rgb(13, 19, 33);
-    box-sizing: border-box;
     border: 1px solid rgb(13, 19, 33);
     opacity: 0.7;
-
+}
+.btn-main a{
+    text-decoration: none;
+    color: rgb(13, 19, 33);
 }
 
 /* Main section style Ends here */
@@ -154,6 +156,7 @@ body {
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
     padding: 20px;
+    margin-top: 40px;
 }
 
 iframe {
@@ -210,7 +213,7 @@ iframe {
     font-weight: 400;
     line-height: 26px;
     letter-spacing: 0%;
-    padding: 20px 0 20px 0;
+    padding: 10px 0 20px 0;
 }
 
 .target-child a,
@@ -317,6 +320,7 @@ input {
     font-weight: 600;
     line-height: 23px;
     letter-spacing: 0%;
+    cursor: pointer;
 }
 
 /* Need Support style end here */
